47.2 - DEVEL
==========================

- Fix the focus jumping around on resize

47.1.1 - October 18, 2024
==========================

- Fix metainfo screenshots

47.1 - October 18, 2024
==========================

- Fix tooltip font color in light mode
- Fix a case when the highlighter doesn't get cleared with undo
- Fix view not grabbing the focus on start blocking keyboard shortcuts
- Fix reset zoom shortcut not working
- Fix pause button having no tooltip
- Fix meson build requirements
- Updated translations:
  Martin (sl). Jürgen Benvenuti (de); Hugo Carvalho (pt); Rafael
  Fontenelle (pt_BR); Luming Zh (zh_CN).

47.0 - September 13, 2024
==========================

- Switch back all keyboard input to KeyPress
- The number picker buttons will no longer grab the focus which was
  blocking movement keys and shortcuts
- Let mouse shortcuts be used in the number picker
- Always dismiss the picker on number input from the keyboard
- Add Enter shortcut interaction with earmark mode
- A lot of backend changes with the number picker
- Fix number picker not updating on undo/redo (#106)
- Fix undo and redo being usable in pause
- Updated translations:
  Danial Behzadi (fa); Anders Jonsson (sv); Sabri Ünal (tr); Daniel
  Rusek (cs); Jiri Grönroos (fi); Yosef Or Boczko (he); Balázs Úr
  (hu); Sergej A. (ru).

47.rc - August 30, 2024
==========================

- Add mouse wheel zoom
- Use consistent terminology for Puzzle and Game
- Increase meson requirement to v1.4 (#109, Tanmay)
- Change the selection to be a bit lighter in light mode
- Update default size to 650x700
- Use variables for app id (!94, Jamie Murphy)
- Change app_id to org.gnome.Sudoku.Devel for gnome nightly (!94)
- Add feature set to metainfo description
- Updated translations

47.beta - August 2, 2024
==========================

- Add accent color support (!91)
- Add zoom feature, supported by new buttons and the standard bindings
- Move create custom game to the start menu