@@ -2,6 +2,7 @@
 ==========================
 
 - Fix the focus jumping around on resize
+- Fix Reset Board not correctly resetting the Timer
 
 47.1.1 - October 18, 2024
 ==========================
